--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,4 +15,7 @@ dependencies = [
     "redis>=6.4.0",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
+    "dashscope>=1.20.0",
+    "requests>=2.31.0",
+    "websockets>=12.0",
 ]
